--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*/.classpath
+*/.gitignore
+*/.project
+*/.settings/org.eclipse.core.resources.prefs
+*/.settings/org.eclipse.jdt.core.prefs
+
 # Compiled class file
 *.class
 
@@ -21,3 +27,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.metadata/
