--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 */.project
 */.settings/org.eclipse.core.resources.prefs
 */.settings/org.eclipse.jdt.core.prefs
+*/.settings/org.eclipse.m2e.core.prefs
 
 # Compiled class file
 *.class
