--- a/GradleSQLiteProject1/build.gradle
+++ b/GradleSQLiteProject1/build.gradle
@@ -17,6 +17,10 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+
+
 	// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
 	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.40.0.0'
 
